--- a/Ex_10/Ex_10.csproj
+++ b/Ex_10/Ex_10.csproj
@@ -96,6 +96,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Form1-Properties.txt" />
     <Content Include="SQL_Schema.txt" />
     <Content Include="student_details_db.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
